src/main/java/com/example/banklib/error/exception/InsufficientBalanceException.java
package com.example.banklib.error.exception;

public class InsufficientBalanceException extends RuntimeException {
    public InsufficientBalanceException(String message) {
        super(message);
    }
}